<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="8dp"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:title="@string/title"
        app:titleTextAppearance="@style/toolbar_main"
        app:titleTextColor="@color/text_white" />


    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_22"
        app:cornerRadius="@dimen/radius_16"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding_8"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btn_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/library"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_22"
        app:cornerRadius="@dimen/radius_16"
        app:icon="@drawable/ic_library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding_8"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_22"
        app:cornerRadius="@dimen/radius_16"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding_8"
        app:iconTint="@color/black" />

</LinearLayout>