<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TrackActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageButton
        android:id="@+id/ibToolbar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="@id/left_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/ivCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_track_big"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/ibToolbar" />

    <TextView
        android:id="@+id/tvTrackName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/text_view"
        android:textFontWeight="400"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/ivCover"
        android:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/tvArtistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/text_view"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvTrackName"
        android:text="The Beatles" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="ibSeen,ibFavorite" />

    <ImageButton
        android:id="@+id/ibSeen"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_seen_button"
        app:layout_constraintEnd_toStartOf="@+id/ibPlayStop"
        app:layout_constraintBottom_toBottomOf="@+id/ibPlayStop"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvArtistName" />

    <ImageButton
        android:id="@+id/ibPlayStop"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="38dp"
        android:background="@color/background_secondary"
        android:src="@drawable/ic_play_track_button"
        app:layout_constraintEnd_toStartOf="@+id/ibFavorite"
        app:layout_constraintStart_toEndOf="@+id/ibSeen"
        app:layout_constraintTop_toBottomOf="@+id/tvArtistName" />

    <ImageButton
        android:visibility="gone"
        android:id="@+id/ibFavorite"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_favorite_button"
        app:layout_constraintBottom_toBottomOf="@+id/ibPlayStop"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/ibPlayStop"
        app:layout_constraintTop_toBottomOf="@+id/tvArtistName" />

    <TextView
        android:id="@+id/tvTrackTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/text_view"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/ibPlayStop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="0:30" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tvDuration, tvСollectionName, tvReleaseDate, tvPrimaryGenreName, tvCountry"
        app:barrierDirection="end" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/text_view_about"
        android:textFontWeight="400"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvTrackTime"
        android:text="@string/duration" />

    <TextView
        android:id="@+id/tvDurationValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_view"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvDuration"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        android:text="5:35"/>

    <TextView
        android:id="@+id/tvСollectionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_view_about"
        android:textFontWeight="400"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvDuration"
        android:text="@string/collection_name" />

    <TextView
        android:id="@+id/tvСollectionNameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_view"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvСollectionName"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        android:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/tvReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_view_about"
        android:textFontWeight="400"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvСollectionName"
        android:text="@string/release_date" />

    <TextView
        android:id="@+id/tvReleaseDateValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_view"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvReleaseDate"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        android:text="1965" />

    <TextView
        android:id="@+id/tvPrimaryGenreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_view_about"
        android:textFontWeight="400"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate"
        android:text="@string/primary_genre_name" />

    <TextView
        android:id="@+id/tvPrimaryGenreNameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_view"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvPrimaryGenreName"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        android:text="Rock" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_view_about"
        android:textFontWeight="400"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvPrimaryGenreName"
        android:text="@string/country" />

    <TextView
        android:id="@+id/tvCountryValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_view"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvCountry"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        android:text="Великобритания" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>